--- a/lab1/PT_Part1_Intro.ipynb
+++ b/lab1/PT_Part1_Intro.ipynb
@@ -425,8 +425,8 @@
         "x_input = torch.tensor([[1, 2.]])\n",
         "model_output = model(x_input)\n",
         "print(f\"input shape: {x_input.shape}\")\n",
-        "print(f\"output shape: {y.shape}\")\n",
-        "print(f\"output result: {y}\")"
+        "print(f\"output shape: {model_output.shape}\")\n",
+        "print(f\"output result: {model_output}\")"
       ]
     },
     {
