--- a/lab2/PT_Part1_MNIST.ipynb
+++ b/lab2/PT_Part1_MNIST.ipynb
@@ -418,7 +418,7 @@
         "            images, labels = images.to(device), labels.to(device)\n",
         "\n",
         "            # Forward pass\n",
-        "            outputs = fc_model(images)\n",
+        "            outputs = model(images)\n",
         "\n",
         "            # Clear gradients before performing backward pass\n",
         "            optimizer.zero_grad()\n",
